Fixed bug where deleted UploadQueueItem would reappear briefly. It was caused by the gap between removal from the client set and actual deletion, thus allowing it to re-propagate.

--- a/client/styles/_global.scss
+++ b/client/styles/_global.scss
@@ -141,6 +141,10 @@ a.fill {
   bottom: 0;
 }
 
+.hidden {
+  display: none;
+}
+
 strong {
   font-weight: bold;
 }
